--- a/css/main.css
+++ b/css/main.css
@@ -7,19 +7,71 @@
 *::before{
     box-sizing: inherit;
 }
+nav{
+    padding:1rem 2rem;
+    background-color: cornflowerblue;
+    border-bottom: 20px solid black;
+    font-size: 2rem;
+}
+nav a{
+    text-decoration: none;
+    color: white;
+    font-weight: 100;
+    padding-right: 90px;
+}
+nav a#link1{
+    text-decoration:underline
+}
+
 html{
+    padding: 50px;
     font-size: 16px;
     font-family: 'web font', 'osx fallback', 'win fallback', sans-serif;
     line-height: 1.5;
 }
+
 header{
-    padding:1rem 2rem;
+    padding:1rem 4rem;
+    text-shadow: 2px 5px pink;
+    font-size: 2rem;
+    background-image: url(../img/img01.jpg);
+    background-size: cover;
+    min-height: 400px;
+    background-repeat: no-repeat;
 }
-nav{
-    padding:1rem 2rem;
+header h1{
+    color: black;
+    padding-bottom: 40px
 }
+
 main{
     padding:1rem 2rem;
+}
+main p{
+    font-size: 1rem;
+    padding-bottom: 30px;
+    font-weight: 100;
+}
+main h1{
+    color: deepskyblue;
+    font-size: 3rem;
+    padding-bottom: 10px;
+}
+
+main h2{
+    color: deepskyblue;
+    font-size: 1.5rem;
+    padding-bottom: 30px;
+}
+
+main ul{
+        padding-left: 20px;
+}
+main ul li{
+    font-size: 1rem;
+    font-weight: 100;
+    padding-bottom: 10px;
+
 }
 section{
     padding:1rem 2rem;
