--- a/css/main.css
+++ b/css/main.css
@@ -2,75 +2,83 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+
 }
 *::after,
 *::before{
     box-sizing: inherit;
 }
+
 nav{
     padding:1rem 2rem;
-    background-color: cornflowerblue;
-    border-bottom: 20px solid black;
+    background-color: hsl(120,10%, 50%);
+    border-bottom: 1rem solid hsl(120,80%, 10%);
     font-size: 2rem;
 }
 nav a{
     text-decoration: none;
-    color: white;
+    color: hsl(120,100%, 100%);
     font-weight: 100;
-    padding-right: 90px;
+    padding-right: 5rem;
 }
 nav a#link1{
-    text-decoration:underline
+    text-decoration:underline;
 }
 
 html{
-    padding: 50px;
+    padding: 1rem 2rem;
     font-size: 16px;
-    font-family: 'web font', 'osx fallback', 'win fallback', sans-serif;
+    font-family: 'ariel', 'helvetica', sans-serif;
     line-height: 1.5;
 }
 
 header{
-    padding:1rem 4rem;
-    text-shadow: 2px 5px pink;
+    padding:1rem 2rem;
+    text-shadow: 0.2rem 0.2rem hsl(120,10%, 50%);
     font-size: 2rem;
     background-image: url(../img/img01.jpg);
     background-size: cover;
     min-height: 400px;
     background-repeat: no-repeat;
 }
+
 header h1{
-    color: black;
-    padding-bottom: 40px
+    color: hsl(120,50%, 50%);
+    padding-bottom: 1rem;
 }
 
+header h2{
+    color:hsl(120,50%, 50%);
+}
 main{
     padding:1rem 2rem;
 }
 main p{
     font-size: 1rem;
-    padding-bottom: 30px;
+    padding-bottom: 1rem;
     font-weight: 100;
 }
 main h1{
-    color: deepskyblue;
+    color: hsl(120,50%, 50%);
     font-size: 3rem;
-    padding-bottom: 10px;
+    padding-bottom: 2rem;
 }
 
 main h2{
-    color: deepskyblue;
+    color: hsl(120,50%, 50%);
     font-size: 1.5rem;
-    padding-bottom: 30px;
+    padding-bottom: 1rem;
 }
 
 main ul{
-        padding-left: 20px;
+        padding-left: 1rem;
 }
+
 main ul li{
     font-size: 1rem;
     font-weight: 100;
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 
 }
 section{
