--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,8 @@ header{
     text-shadow: 0.2rem 0.2rem hsl(120,10%, 50%);
     font-size: 2rem;
     background-image: url(../img/img01.jpg);
-    background-size: initial;
-    max-height: 400px;
+    background-size: cover;
+    min-height: 400px;
     background-repeat: no-repeat;
 }
 
