--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+/*    box-sizing: border-box;*/
 
 
 }
@@ -39,8 +39,8 @@ header{
     font-size: 2rem;
     background-image: url(../img/img01.jpg);
     background-size: cover;
-    min-height: 700px;
-    
+    width: auto;
+    min-height: 300px;
     background-repeat: no-repeat;
 }
 
